everything building, getting e2e test working

--- a/demos/simple-storage/protocol/package.json
+++ b/demos/simple-storage/protocol/package.json
@@ -2,6 +2,7 @@
   "name": "@web3api/examples-simple-storage",
   "version": "0.0.1-prealpha.1",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "build": "w3 build",
     "test:env:up": "w3 test-env up && yarn contracts:deploy",
