--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/",
-    "test": "jest --passWithNoTests --runInBand --verbose",
-    "test:watch": "jest --watch --passWithNoTests --verbose",
-    "test:ci": "yarn test:env:up && yarn test && yarn test:env:down",
+    "test": "TEST=true jest --passWithNoTests --runInBand --verbose",
+    "test:watch": "TEST=true jest --watch --passWithNoTests --verbose",
+    "test:ci": "TEST=true yarn test:env:up && yarn test && yarn test:env:down",
     "test:env:up": "w3 test-env up",
     "test:env:down": "w3 test-env down"
   },
@@ -21,7 +21,7 @@
     "@web3api/schema-parse": "0.0.1-prealpha.1",
     "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
-    "threads": "1.6.3"
+    "web-worker": "1.0.0"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
