--- a/demos/simple-storage/protocol/package.json
+++ b/demos/simple-storage/protocol/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@web3api/cli": "0.0.1-prealpha.1",
-    "@web3api/client-js": "0.0.1-prealpha.1",
+    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.1",
     "@web3api/wasm-as": "0.0.1-prealpha.1",
     "ethers": "5.0.8",
     "js-yaml": "3.14.0"
