--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -12,3 +12,6 @@ query:
   module:
     language: wasm/assemblyscript
     file: ./src/query/index.ts
+import_redirects:
+  - uri: w3://ens/ethereum.web3api.eth
+    schema: ../../../packages/js/plugins/ethereum/src/schema.graphql
