--- a/demos/simple-storage/dapp/package.json
+++ b/demos/simple-storage/dapp/package.json
@@ -9,10 +9,13 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@web3api/client-js": "0.0.1-prealpha.1",
+    "http-proxy": "1.18.1",
+    "http-proxy-middleware": "1.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "stream-array": "1.1.2"
   },
   "devDependencies": {
     "eslint": "^6.6.0"
