--- a/demos/simple-storage/dapp/package.json
+++ b/demos/simple-storage/dapp/package.json
@@ -18,7 +18,8 @@
     "stream-array": "1.1.2"
   },
   "devDependencies": {
-    "eslint": "^6.6.0"
+    "eslint": "^6.6.0",
+    "workerize-loader": "1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
