yarn test:ci fixes

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "build:cli": "lerna run build --scope @web3api/cli",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint -- --fix",
-    "lint:ci": "lerna run --parallel lint",
+    "lint:ci": "lerna run lint --parallel",
     "test": "lerna run test --no-private",
-    "test:ci": "lerna run test:ci --no-private",
+    "test:ci": "lerna run test:ci --no-private --parallel",
     "clean": "rimraf ./**/node_modules ./**/build ./**/coverage"
   },
   "devDependencies": {
