--- a/packages/js/plugins/http/package.json
+++ b/packages/js/plugins/http/package.json
@@ -6,16 +6,17 @@
     "scripts": {
       "build": "rimraf ./build && tsc",
       "lint": "eslint --color --ext .ts src/",
+      "lint:fix": "eslint --color --fix --ext .ts src/",
       "test": "jest --passWithNoTests --runInBand --verbose",
       "test:watch": "jest --watch --passWithNoTests --verbose"
     },
     "dependencies": {
-      "@web3api/client-js": "0.0.1-prealpha.1",
       "@web3api/core-js": "^0.0.1-prealpha.1",
       "axios": "0.21.1"
     },
     "devDependencies": {
       "@types/jest": "26.0.8",
+      "@web3api/client-js": "0.0.1-prealpha.1",
       "jest": "26.2.2",
       "rimraf": "3.0.2",
       "ts-jest": "26.1.4",
