almost fully building with new manifest tooling

--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -1,4 +1,4 @@
-format: 0.0.1-alpha.1
+format: 0.0.1-prealpha.1
 description: SimpleStorage Web3API Example
 repository: https://github.com/web3-api/prototype
 mutation:
