--- a/packages/js/core/package.json
+++ b/packages/js/core/package.json
@@ -11,9 +11,12 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
+    "@web3api/manifest-schema": "0.0.1-prealpha.1",
     "graphql": "15.3.0",
     "graphql-tag": "2.10.4",
-    "js-yaml": "3.14.0"
+    "jsonschema": "1.4.0",
+    "js-yaml": "3.14.0",
+    "semver": "7.3.4"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
