--- a/packages/js/core/src/__tests__/manifest/validator/incorrect-version-format/web3api.yml
+++ b/packages/js/core/src/__tests__/manifest/validator/incorrect-version-format/web3api.yml
@@ -1,13 +1,13 @@
-format: 456
+format: "BAD_FORMAT_VERSION"
 mutation:
   schema:
     file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ../query-file.ts
+    file: ../query.ts
 query:
   schema:
     file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./src/mutation-file.ts
+    file: ../mutation.ts
