--- a/packages/js/core/src/__tests__/manifest/validator/not-accepted-field/web3api.yml
+++ b/packages/js/core/src/__tests__/manifest/validator/not-accepted-field/web3api.yml
@@ -1,13 +1,16 @@
-format: "0.0.1-alpha.1"
+format: "0.1.1"
 mutation:
   schema:
-    file: .../schema.graphql
+    file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ../query-file.ts
+    file: ../query.ts
 query:
   schema:
     file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./NOT_EXISTANT_FILE
+    file: ../mutation.ts
+not_accepted_field: not_accepted_field
+
+
