--- a/packages/js/core/src/__tests__/manifest/validator/wrong-type/web3api.yml
+++ b/packages/js/core/src/__tests__/manifest/validator/wrong-type/web3api.yml
@@ -1,13 +1,13 @@
-format: "BAD_FORMAT_VERSION"
+format: 456
 mutation:
   schema:
     file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ../query-file.ts
+    file: ../query.ts
 query:
   schema:
     file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ../mutation-file.ts
+    file: ./src/mutation.ts
