--- a/packages/js/core/tsconfig.json
+++ b/packages/js/core/tsconfig.json
@@ -21,7 +21,7 @@
     "module": "commonjs",
     "sourceMap": true,
     "target": "es5",
-    "strictNullChecks": true
+    "resolveJsonModule": true
   },
   "include": [
     "./src/**/*"
