--- a/packages/js/core/src/__tests__/manifest/validator/file-string-malformed/web3api.yaml
+++ b/packages/js/core/src/__tests__/manifest/validator/file-string-malformed/web3api.yaml
@@ -1,7 +1,7 @@
 format: "0.0.1-prealpha.1"
 mutation:
   schema:
-    file: .../schema.graphql
+    file: .9-../schema.graphql
   module:
     language: wasm/assemblyscript
     file: ../query.ts
