--- a/packages/js/core/src/__tests__/manifest/validator/wrong-type/web3api.yaml
+++ b/packages/js/core/src/__tests__/manifest/validator/wrong-type/web3api.yaml
@@ -1,7 +1,7 @@
-format: "0.1.1"
+format: 0.0.1-prealpha.1
 mutation:
   schema:
-    file: ../schema.graphql
+    file: 2345235235235
   module:
     language: wasm/assemblyscript
     file: ../query.ts
@@ -10,7 +10,4 @@ query:
     file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ../mutation.ts
-not_accepted_field: not_accepted_field
-
-
+    file: ./src/mutation.ts
