--- a/packages/js/core/package.json
+++ b/packages/js/core/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "main": "build/index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc --project tsconfig.build.json",
+    "build": "rimraf ./build && yarn build:manifest && tsc --project tsconfig.build.json",
+    "build:manifest": "node ./scripts/generateManifest.js",
     "lint": "eslint --color --ext .ts src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/jest": "26.0.8",
     "jest": "26.2.2",
+    "json-schema-to-typescript": "10.1.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
     "ts-node": "8.10.2",
