generateManifest script fixes

--- a/packages/manifest-schema/package.json
+++ b/packages/manifest-schema/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@web3api/manifest-schema",
   "version": "0.0.1-prealpha.1",
-  "license": "MIT"
+  "license": "MIT",
+  "main": "./package.json"
 }
