Fix unit tests and add e2e tests for get method

--- a/packages/js/plugins/http/package.json
+++ b/packages/js/plugins/http/package.json
@@ -21,6 +21,7 @@
       "rimraf": "3.0.2",
       "ts-jest": "26.1.4",
       "ts-node": "8.10.2",
-      "typescript": "3.9.7"
+      "typescript": "3.9.7",
+      "nock": "13.0.7"
     }
   }
