--- a/packages/js/plugins/http/tsconfig.build.json
+++ b/packages/js/plugins/http/tsconfig.build.json
@@ -1,9 +1,3 @@
 {
-  "extends": "./tsconfig.json",
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "./src/**/__tests__"
-  ]
+  "extends": "../../../../tsconfig.build",
 }
