--- a/packages/js/plugins/ethereum/tsconfig.build.json
+++ b/packages/js/plugins/ethereum/tsconfig.build.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../../../../tsconfig.build",
+  "extends": "./tsconfig.json",
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "./src/**/__tests__"
+  ]
 }
