--- a/packages/js/plugins/http/package.json
+++ b/packages/js/plugins/http/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "main": "build/index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/",
     "lint:fix": "eslint --color --fix --ext .ts src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
