--- a/packages/js/client/tsconfig.json
+++ b/packages/js/client/tsconfig.json
@@ -2,5 +2,9 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "outDir": "build"
-  }
+  },
+  "include": [
+    "./src/**/*.ts"
+  ],
+  "exclude": []
 }
