--- a/demos/simple-storage/dapp/package.json
+++ b/demos/simple-storage/dapp/package.json
@@ -16,7 +16,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-lottie": "1.2.5",
-    "eslint": "6.6.0",
+    "eslint": "^6.6.0",
     "typescript": "3.7.2"
   },
   "scripts": {
