--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -19,6 +19,7 @@
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.1",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.1",
     "@web3api/schema-parse": "0.0.1-prealpha.1",
+    "@web3api/test-cases": "0.0.1-prealpha.1",
     "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
     "web-worker": "1.0.0"
