Update package.json file

--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1-prealpha.1",
   "license": "MIT",
   "main": "build/index.js",
+  "private": "true",
   "bin": {
     "web3api-worker-install": "bin/web3api-worker-install"
   },
@@ -22,6 +23,7 @@
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.1",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.1",
     "@web3api/schema-parse": "0.0.1-prealpha.1",
+    "assemblyscript": "0.18.10",
     "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
     "web-worker": "1.0.0"
