--- a/packages/js/react/tsconfig.build.json
+++ b/packages/js/react/tsconfig.build.json
@@ -1,9 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "./src/**/__tests__"
-  ]
+  "include": ["./src/**/*.tsx"],
+  "exclude": ["./src/**/__tests__"]
 }
