--- a/packages/js/react/tsconfig.json
+++ b/packages/js/react/tsconfig.json
@@ -1,25 +1,11 @@
 {
+  "extends": "../../../tsconfig",
   "compilerOptions": {
-    "target": "es5",
     "outDir": "build",
-    "module": "esnext",
-    "lib": ["dom", "esnext"],
-    "importHelpers": true,
-    "declaration": true,
-    "sourceMap": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
     "jsx": "react",
-    "esModuleInterop": true
-  }
+    "target": "es5",
+    "allowSyntheticDefaultImports": true
+  },
+  "include": ["./src/**/*.tsx"],
+  "exclude": []
 }
