--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -6,11 +6,8 @@
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext 'src/**/*.{ts|tsx}'",
-    "test": "TEST=true jest --passWithNoTests --runInBand --verbose",
-    "test:watch": "TEST=true jest --watch --passWithNoTests --verbose",
-    "test:ci": "TEST=true yarn test:env:up && yarn test && yarn test:env:down",
-    "test:env:up": "w3 test-env up",
-    "test:env:down": "w3 test-env down"
+    "test": "TEST=true jest --passWithNoTests --runInBand --verbose --env=jest-environment-jsdom",
+    "test:watch": "yarn test --watch"
   },
   "dependencies": {
     "@web3api/client-js": "0.0.1-prealpha.1"
@@ -19,6 +16,7 @@
     "@testing-library/react": "^11.2.5",
     "@types/jest": "26.0.8",
     "jest": "26.2.2",
+    "jest-environment-jsdom": "^26.0.1",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
