--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,13 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "0.0.0"
+  "version": "independent",
+  "command": {
+    "publish": {
+      "ignore": [
+        "@web3api/demo-*",
+        "templates-*"
+      ]
+    }
+  }
 }
