--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@web3api/client-js",
+  "description": "Web3API Javascript Client",
   "version": "0.0.1-prealpha.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/web3-api/monorepo.git"
+  },
   "main": "build/index.js",
+  "files": [
+    "build",
+    "bin"
+  ],
   "bin": {
     "web3api-worker-install": "bin/web3api-worker-install"
   },
@@ -17,31 +26,35 @@
     "test:env:down": "w3 test-env down"
   },
   "dependencies": {
-    "@msgpack/msgpack": "2.3.0",
     "@web3api/core-js": "0.0.1-prealpha.1",
     "@web3api/ens-plugin-js": "0.0.1-prealpha.1",
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.1",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.1",
     "@web3api/schema-parse": "0.0.1-prealpha.1",
+    "@msgpack/msgpack": "2.3.0",
     "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
     "web-worker": "1.0.0"
   },
   "devDependencies": {
+    "@web3api/cli": "0.0.1-prealpha.1",
     "@types/jest": "26.0.8",
     "@types/js-yaml": "3.11.1",
     "@types/semver": "^7.3.4",
-    "@web3api/cli": "0.0.1-prealpha.1",
     "axios": "0.19.2",
     "jest": "26.2.2",
     "rimraf": "3.0.2",
     "spawn-command": "0.0.2-1",
     "ts-jest": "26.1.4",
+    "ts-loader": "8.0.17",
     "ts-node": "8.10.2",
     "typescript": "3.9.7",
-    "ts-loader": "8.0.17",
     "webpack": "4.44.2",
     "webpack-cli": "4.5.0",
     "worker-plugin": "5.0.0"
+  },
+  "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
+  "publishConfig": {
+    "access": "public"
   }
 }
