--- a/packages/js/plugins/http/package.json
+++ b/packages/js/plugins/http/package.json
@@ -1,9 +1,17 @@
 {
   "name": "@web3api/http-plugin-js",
-  "description": "HTTP plugin enabling invocating http methods through web3api",
+  "description": "Web3API HTTP Javascript Plugin",
   "version": "0.0.1-prealpha.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/web3-api/monorepo.git"
+  },
   "main": "build/index.js",
+  "files": [
+    "build",
+    "schema.graphql"
+  ],
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/",
@@ -12,17 +20,21 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/core-js": "^0.0.1-prealpha.1",
+    "@web3api/core-js": "0.0.1-prealpha.1",
     "axios": "0.21.1"
   },
   "devDependencies": {
-    "@types/jest": "26.0.8",
     "@web3api/client-js": "0.0.1-prealpha.1",
+    "@types/jest": "26.0.8",
     "jest": "26.2.2",
+    "nock": "13.0.7",
     "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
     "ts-node": "8.10.2",
-    "typescript": "3.9.7",
-    "nock": "13.0.7"
+    "typescript": "3.9.7"
+  },
+  "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
+  "publishConfig": {
+    "access": "public"
   }
 }
