--- a/packages/js/plugins/ipfs/package.json
+++ b/packages/js/plugins/ipfs/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@web3api/ipfs-plugin-js",
+  "description": "Web3API IPFS Javascript Plugin",
   "version": "0.0.1-prealpha.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/web3-api/monorepo.git"
+  },
   "main": "build/index.js",
+  "files": [
+    "build",
+    "schema.graphql"
+  ],
   "scripts": {
     "build": "rimraf build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/",
@@ -23,5 +32,9 @@
     "ts-jest": "26.1.4",
     "ts-node": "8.10.2",
     "typescript": "3.9.7"
+  },
+  "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
+  "publishConfig": {
+    "access": "public"
   }
 }
