--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.pull_request.base.ref }}
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Commenter Is Publisher?
         run: |
@@ -84,7 +84,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.pull_request.base.ref }}
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Set env.BOT to Build Bot's Username
         run: echo BOT=web3-api-build-bot >> $GITHUB_ENV
@@ -129,7 +129,7 @@ jobs:
           token: ${{ secrets.WEB3_API_BUILD_BOT_PAT }}
           push-to-fork: ${{env.BOT}}/${{github.event.repository.name}}
           branch: release/${{env.RELEASE_VERSION}}
-          base: ${{ github.event.pull_request.base.ref }}
+          base: ${{ github.event.pull_request.head.ref }}
           committer: GitHub <noreply@github.com>
           author: ${{env.BOT}} <${{env.BOT}}@users.noreply.github.com>
           commit-message: "${{env.RELEASE_VERSION}}"
