--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext 'src/**/*.{ts|tsx}'",
+    "test:ci": "TEST=true yarn test:env:up && yarn test",
     "test": "TEST=true jest --passWithNoTests --runInBand --verbose --env=jest-environment-jsdom",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "posttest:ci": "yarn test:env:down",
+    "test:env:up": "w3 test-env up",
+    "test:env:down": "w3 test-env down"
   },
   "dependencies": {
     "@web3api/client-js": "0.0.1-prealpha.1"
   },
   "devDependencies": {
+    "@web3api/cli": "0.0.1-prealpha.1",
     "@testing-library/react": "^11.2.5",
-    "@types/jest": "26.0.8",
-    "jest": "26.2.2",
-    "jest-environment-jsdom": "^26.0.1",
-    "typescript": "^4.1.3"
+    "jest-environment-jsdom": "^26.0.1"
   },
   "peerDependencies": {
     "react": ">=16.8"
