--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -19,7 +19,10 @@
   "devDependencies": {
     "@web3api/cli": "0.0.1-prealpha.3",
     "@testing-library/react": "^11.2.5",
-    "jest-environment-jsdom": "^26.0.1"
+    "@types/jest": "26.0.8",
+    "jest": "26.2.2",
+    "jest-environment-jsdom": "^26.0.1",
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": ">=16.8"
