--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -9,9 +9,12 @@
     "test:ci": "TEST=true yarn test:env:up && yarn test",
     "test": "TEST=true jest --passWithNoTests --runInBand --verbose --env=jest-environment-jsdom",
     "test:watch": "yarn test --watch",
+    "pretest": "yarn install:web3api",
+    "pretest:ci": "yarn install:web3api",
     "posttest:ci": "yarn test:env:down",
     "test:env:up": "w3 test-env up",
-    "test:env:down": "w3 test-env down"
+    "test:env:down": "w3 test-env down",
+    "install:web3api": "npx web3api-worker-install ./"
   },
   "dependencies": {
     "@web3api/client-js": "0.0.1-prealpha.3"
@@ -22,6 +25,7 @@
     "@types/jest": "26.0.8",
     "jest": "26.2.2",
     "jest-environment-jsdom": "^26.0.1",
+    "rimraf": "3.0.2",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
