--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -7,10 +7,9 @@
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext 'src/**/*.{ts|tsx}'",
     "test:ci": "TEST=true yarn test:env:up && yarn test",
-    "test": "TEST=true jest --passWithNoTests --runInBand --verbose --env=jest-environment-jsdom",
+    "test": "TEST=true jest --passWithNoTests --runInBand --verbose --env=./src/__tests__/env/index.ts",
     "test:watch": "yarn test --watch",
     "pretest": "yarn install:web3api",
-    "pretest:ci": "yarn install:web3api",
     "posttest:ci": "yarn test:env:down",
     "test:env:up": "w3 test-env up",
     "test:env:down": "w3 test-env down",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@web3api/cli": "0.0.1-prealpha.3",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/react-hooks": "^5.1.0",
     "@types/jest": "26.0.8",
     "jest": "26.2.2",
     "jest-environment-jsdom": "^26.0.1",
@@ -29,6 +29,6 @@
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "react": ">=16.8"
+    "@react": ">=16.13.1"
   }
 }
