--- a/demos/simple-storage/protocol/package.json
+++ b/demos/simple-storage/protocol/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "build": "npx w3 build",
+    "contracts:deploy": "node ./deploy-contracts.js",
     "test:env:up": "npx w3 test-env up && yarn contracts:deploy",
     "test:env:down": "npx w3 test-env down"
   },
