--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -19,8 +19,8 @@
     "build": "rimraf ./build && tsc --project tsconfig.build.json && npx webpack --config webpack.config.js",
     "lint": "eslint --color --ext .ts src/",
     "test": "TEST=true jest --passWithNoTests --runInBand --verbose",
-    "test:watch": "TEST=true jest --watch --passWithNoTests --verbose",
-    "test:ci": "yarn test"
+    "test:ci": "TEST=true jest --passWithNoTests --runInBand --verbose",
+    "test:watch": "TEST=true jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
     "@msgpack/msgpack": "2.3.0",
