--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -21,6 +21,9 @@
     "test": "TEST=true jest --passWithNoTests --runInBand --verbose",
     "test:watch": "TEST=true jest --watch --passWithNoTests --verbose",
     "test:ci": "TEST=true yarn test:env:up && yarn test",
+    "pretest:integration": "cd ../../../demos/simple-storage/dapp && yarn build",
+    "test:integration": "start-server-and-test 'serve ../../../demos/simple-storage/dapp/build' http://localhost:5000 'cypress run'",
+    "test:integration:ci": "TEST=true yarn test:env:up && yarn test:integration",
     "posttest:ci": "yarn test:env:down",
     "test:env:up": "w3 test-env up",
     "test:env:down": "w3 test-env down"
@@ -42,9 +45,12 @@
     "@types/semver": "^7.3.4",
     "@web3api/cli": "0.0.1-prealpha.5",
     "axios": "0.19.2",
+    "cypress": "^6.6.0",
     "jest": "26.2.2",
     "rimraf": "3.0.2",
     "spawn-command": "0.0.2-1",
+    "start-server-and-test": "1.12.0",
+    "serve": "^11.3.2",
     "ts-jest": "26.1.4",
     "ts-loader": "8.0.17",
     "ts-node": "8.10.2",
