--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,38 +1,38 @@
 {
-  "author": "Richard Moore <me@ricmoo.com>",
-  "description": "Logger utility functions for ethers.",
-  "ethereum": "donations.ethers.eth",
-  "funding": [
-    {
-      "type": "individual",
-      "url": "https://gitcoin.co/grants/13/ethersjs-complete-simple-and-tiny-2"
-    },
-    {
-      "type": "individual",
-      "url": "https://www.buymeacoffee.com/ricmoo"
-    }
-  ],
-  "keywords": [
-    "Ethereum",
-    "ethers"
-  ],
+  "name": "@web3api/logger",
+  "description": "Web3API Core",
+  "version": "0.0.1-prealpha.4",
   "license": "MIT",
-  "main": "./lib/index.js",
-  "module": "./lib.esm/index.js",
-  "name": "@ethersproject/logger",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/web3-api/monorepo.git"
+  },
+  "main": "build/index.js",
+  "files": [
+    "build"
+  ],
+  "scripts": {
+    "build": "rimraf ./build && yarn build:manifest && tsc --project tsconfig.build.json",
+    "build:manifest": "node ./scripts/generateManifest.js",
+    "lint": "eslint --color --ext .ts src/",
+    "test": "jest --passWithNoTests --runInBand --verbose",
+    "test:ci": "jest --passWithNoTests --runInBand --verbose",
+    "test:watch": "jest --watch --passWithNoTests --verbose"
+  },
+  "devDependencies": {
+    "@types/jest": "26.0.8",
+    "jest": "26.2.2",
+    "json-schema-to-typescript": "10.1.3",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.1.4",
+    "ts-node": "8.10.2",
+    "typescript": "3.9.7"
+  },
+  "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
   "publishConfig": {
     "access": "public"
   },
-  "repository": {
-    "directory": "packages/logger",
-    "type": "git",
-    "url": "git://github.com/ethers-io/ethers.js.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "sideEffects": false,
-  "tarballHash": "0x1ce479e7bf8d56a5bc43f640db51bf23248557a9f79c8e5b01ba01089627080c",
-  "types": "./lib/index.d.ts",
-  "version": "5.0.9"
+  "dependencies": {
+    "@types/jaeger-client": "^3.15.4"
+  }
 }
