--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -26,7 +26,8 @@
     "test:integration:ci": "TEST=true yarn test:env:up && yarn test:integration",
     "posttest:ci": "yarn test:env:down",
     "test:env:up": "w3 test-env up",
-    "test:env:down": "w3 test-env down"
+    "test:env:down": "w3 test-env down",
+    "start:demo": "serve ../../../demos/simple-storage/dapp/build"
   },
   "dependencies": {
     "@msgpack/msgpack": "2.3.0",
@@ -51,10 +52,12 @@
     "spawn-command": "0.0.2-1",
     "start-server-and-test": "1.12.0",
     "serve": "^11.3.2",
+    "truffle-privatekey-provider": "1.5.0",
     "ts-jest": "26.1.4",
     "ts-loader": "8.0.17",
     "ts-node": "8.10.2",
     "typescript": "3.9.7",
+    "web3": "^1.3.4",
     "webpack": "4.44.2",
     "webpack-cli": "4.5.0",
     "worker-plugin": "5.0.0"
