--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -12,8 +12,7 @@
     "build"
   ],
   "scripts": {
-    "build": "rimraf ./build && yarn build:manifest && tsc --project tsconfig.build.json",
-    "build:manifest": "node ./scripts/generateManifest.js",
+    "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
