--- a/packages/js/plugins/logger/package.json
+++ b/packages/js/plugins/logger/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
-    "@web3api/client-js": "^0.0.1-prealpha.5",
+    "@web3api/client-js": "0.0.1-prealpha.4",
     "jest": "26.2.2",
     "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
