--- a/packages/js/core/package.json
+++ b/packages/js/core/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@web3api/manifest-schema": "0.0.1-prealpha.8",
+    "@web3api/logger": "0.0.1-prealpha.7",
     "graphql": "15.5.0",
     "graphql-tag": "2.10.4",
     "js-yaml": "3.14.0",
