--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -32,10 +32,8 @@
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.5",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.5",
     "@web3api/schema-parse": "0.0.1-prealpha.5",
-    "axios": "0.19.2",
     "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
-    "spawn-command": "0.0.2-1",
     "web-worker": "1.0.0"
   },
   "devDependencies": {
@@ -43,6 +41,7 @@
     "@types/js-yaml": "3.11.1",
     "@types/semver": "^7.3.4",
     "@web3api/cli": "0.0.1-prealpha.5",
+    "@web3api/test-env-js": "0.0.1-prealpha.5",
     "jest": "26.2.2",
     "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
