--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@web3api/cli": "0.0.1-prealpha.5",
+    "@web3api/test-env-js": "0.0.1-prealpha.5",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
     "@types/jest": "26.0.8",
