--- a/demos/ens/protocol/package.json
+++ b/demos/ens/protocol/package.json
@@ -5,7 +5,8 @@
   "version": "0.0.1-prealpha.5",
   "scripts": {
     "build": "npx w3 build",
-    "test:env:up": "npx w3 test-env up && yarn contracts:deploy",
+    "codegen": "npx w3 codegen",
+    "test:env:up": "npx w3 test-env up && node ./deploy-contracts",
     "test:env:down": "npx w3 test-env down"
   },
   "devDependencies": {
@@ -14,5 +15,8 @@
     "@web3api/wasm-as": "0.0.1-prealpha.5",
     "ethers": "5.0.8",
     "js-yaml": "3.14.0"
+  },
+  "dependencies": {
+    "eth-ens-namehash": "2.0.8"
   }
 }
