--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -32,8 +32,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/jaeger-client": "^3.15.4",
-    "jaeger-client": "^3.18.1",
-    "opentracing": "^0.14.5"
+    "@opentelemetry/api": "^1.0.0-rc.0",
+    "@opentelemetry/core": "^0.18.0",
+    "@opentelemetry/exporter-jaeger": "^0.18.0",
+    "@opentelemetry/node": "^0.18.0",
+    "@opentelemetry/tracing": "^0.18.0",
+    "@opentelemetry/web": "^0.18.0"
   }
 }
