Modified build command, build logic inside dockerfile, bumped versions

--- a/demos/simple-storage/repro-build-protocol/web3api.build.yaml
+++ b/demos/simple-storage/repro-build-protocol/web3api.build.yaml
@@ -1,9 +1,8 @@
 image: 
   name: build-env
-  dockerfile: ./myCustomDockerfile #Comment to use default image
+  dockerfile: ./docker
 env:
   sources:
     - ./src
     - ./package.json
   outputDir: ./build
-  script: ./script.sh
