--- a/demos/simple-storage/repro-build-protocol/package.json
+++ b/demos/simple-storage/repro-build-protocol/package.json
@@ -10,9 +10,9 @@
     "reproducible-build": "w3 reproducible-build build --quiet=false"
   },
   "devDependencies": {
-    "@web3api/cli": "0.0.1-prealpha.1",
-    "@namestys/ethereum-plugin-js": "2.0.0-alpha.0",
-    "@namestys/wasm-as": "2.0.0-alpha.0",
+    "@web3api/cli": "0.0.1-prealpha.6",
+    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.6",
+    "@web3api/wasm-as": "0.0.1-prealpha.6",
     "ethers": "5.0.8",
     "js-yaml": "3.14.0"
   }
