--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json && npx webpack --config webpack.config.js",
+    "prebuild": "ts-node ./scripts/extractPluginConfigs.ts",
     "lint": "eslint --color --ext .ts src/",
     "test": "TEST=true jest --passWithNoTests --runInBand --verbose",
     "test:ci": "TEST=true jest --passWithNoTests --runInBand --verbose",
@@ -45,6 +46,7 @@
     "ts-jest": "26.1.4",
     "ts-loader": "8.0.17",
     "ts-node": "8.10.2",
+    "ts-morph": "10.0.1",
     "typescript": "3.9.7",
     "webpack": "4.44.2",
     "webpack-cli": "4.5.0",
