Ignore paths instead of include

--- a/demos/simple-storage/repro-build-protocol/web3api.build.yaml
+++ b/demos/simple-storage/repro-build-protocol/web3api.build.yaml
@@ -1,8 +1,8 @@
 image: 
   name: build-env
-  dockerfile: ./docker
+  dockerfile: ./Dockerfile
 env:
-  sources:
-    - ./src
-    - ./package.json
+  ignorePaths:
+    - ./node_modules
+    - ./build
   outputDir: ./build
