--- a/demos/simple-storage/repro-build-protocol/web3api.build.yaml
+++ b/demos/simple-storage/repro-build-protocol/web3api.build.yaml
@@ -1,6 +1,6 @@
 image: 
   name: build-env
-  dockerfile: ./Dockerfile
+  dockerfile: node:12.20.1-wasm:0.17.13
 env:
   ignorePaths:
     - ./node_modules
