Schema and manifest being copied into image. Temp folder changed

--- a/demos/simple-storage/repro-build-protocol/web3api.build.yaml
+++ b/demos/simple-storage/repro-build-protocol/web3api.build.yaml
@@ -1,8 +1,7 @@
 image: 
   name: build-env
-  dockerfile: node:12.20.1-wasm:0.17.13
+  dockerfile: node:12.20.1-asc:0.17.13
 env:
   ignorePaths:
     - ./node_modules
-    - ./build
   outputDir: ./build
