core-apis and apis + update github link

--- a/packages/core-apis/logger/web3api.yaml
+++ b/packages/core-apis/logger/web3api.yaml
@@ -1,4 +1,4 @@
-description: Web3API Resolver Standard
+description: Web3API Logger Standard
 format: 0.0.1-prealpha.1
 repository: https://github.com/web3-api/monorepo
 abstract: true
