--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -1,6 +1,6 @@
 format: 0.0.1-prealpha.1
 description: SimpleStorage Web3API Example
-repository: https://github.com/web3-api/prototype
+repository: https://github.com/web3-api/monorepo
 mutation:
   schema:
     file: ./src/mutation/schema.graphql
