--- a/packages/apis/console/web3api.yaml
+++ b/packages/apis/console/web3api.yaml
@@ -1,5 +1,5 @@
 description: Console log Web3Api
-repository: https://github.com/web3-api/prototype
+repository: https://github.com/web3-api/monorepo
 format: 0.0.1-prealpha.1
 query:
   schema:
@@ -9,4 +9,4 @@ query:
     file: ./src/query/index.ts
 import_redirects:
   - uri: w3://w3/logger
-    schema: ../../js/plugins/logger/schema.graphql
+    schema: ../core-apis/logger/schema.graphql
