feat: integration tests of demo with dappeteer works

--- a/demos/simple-storage/dapp/package.json
+++ b/demos/simple-storage/dapp/package.json
@@ -40,7 +40,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint --ext .tsx --ext .ts src/",
-    "test": "jest --config ./jest.config.js --isolatedModules=false",
+    "test": "jest",
     "eject": "react-scripts eject",
     "prebuild": "yarn install:web3api",
     "prestart": "yarn install:web3api",
