--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -23,10 +23,7 @@
     "test:ci": "TEST=true yarn test:env:up && yarn test",
     "posttest:ci": "yarn test:env:down",
     "test:env:up": "w3 test-env up",
-    "test:env:down": "w3 test-env down",
-    "pretest:integration": "cd ../../../demos/simple-storage/dapp && yarn build",
-    "test:integration": "start-server-and-test 'serve ../../../demos/simple-storage/dapp/build' http://localhost:5000 'cypress run'",
-    "start:demo": "serve ../../../demos/simple-storage/dapp/build"
+    "test:env:down": "w3 test-env down"
   },
   "dependencies": {
     "@msgpack/msgpack": "2.3.0",
@@ -49,7 +46,6 @@
     "rimraf": "3.0.2",
     "serve": "^11.3.2",
     "spawn-command": "0.0.2-1",
-    "start-server-and-test": "1.12.0",
     "ts-jest": "26.1.4",
     "ts-loader": "8.0.17",
     "ts-node": "8.10.2",
