[WIP] UTS46 plugin added

--- a/demos/ens/protocol/package.json
+++ b/demos/ens/protocol/package.json
@@ -13,6 +13,7 @@
     "@web3api/cli": "0.0.1-prealpha.5",
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.5",
     "@web3api/wasm-as": "0.0.1-prealpha.5",
+    "@web3api/ensnamehash": "0.0.1-prealpha.5",
     "ethers": "5.0.8",
     "js-yaml": "3.14.0"
   },
