--- a/demos/ens/protocol/web3api.yaml
+++ b/demos/ens/protocol/web3api.yaml
@@ -9,3 +9,5 @@ query:
 import_redirects:
   - uri: w3://ens/ethereum.web3api.eth
     schema: ./node_modules/@web3api/ethereum-plugin-js/schema.graphql
+  - uri: w3://ens/namehash.web3api.eth
+    schema: ../../../node_modules/@web3api/ensnamehash/schema.graphql
