--- a/packages/js/plugins/sha3/package.json
+++ b/packages/js/plugins/sha3/package.json
@@ -29,7 +29,8 @@
     "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
     "ts-node": "8.10.2",
-    "typescript": "3.9.7"
+    "typescript": "3.9.7",
+    "@web3api/client-js": "0.0.1-prealpha.7"
   },
   "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
   "publishConfig": {
