remove demos + docs

--- a/package.json
+++ b/package.json
@@ -9,13 +9,7 @@
   },
   "workspaces": {
     "packages": [
-      "./packages/**/*",
-      "./demos/**/*"
-    ],
-    "nohoist": [
-      "**/@testing-library/*",
-      "**/@types/testing-library*",
-      "**/@types/react-lottie"
+      "./packages/**/*"
     ]
   },
   "scripts": {
