Generate uuid if query or invoke id are missing

--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -33,14 +33,15 @@
     "@web3api/schema-parse": "0.0.1-prealpha.8",
     "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
+    "uuid": "^8.3.2",
     "web-worker": "1.0.0"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
     "@types/js-yaml": "3.11.1",
     "@types/semver": "^7.3.4",
+    "@types/uuid": "^8.3.0",
     "@web3api/cli": "0.0.1-prealpha.8",
-    "@web3api/test-cases": "0.0.1-prealpha.8",
     "@web3api/test-env-js": "0.0.1-prealpha.8",
     "jest": "26.2.2",
     "rimraf": "3.0.2",
