--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -16,3 +16,5 @@ query:
 import_redirects:
   - uri: w3://ens/ethereum.web3api.eth
     schema: ../../../packages/js/plugins/ethereum/schema.graphql
+  - uri: w3://w3/logger
+    schema: ../../../packages/js/plugins/ethereum/schema.graphql
