--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -31,8 +31,8 @@
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.7",
     "@web3api/logger-plugin-js": "0.0.1-prealpha.7",
     "@web3api/schema-parse": "0.0.1-prealpha.7",
-    "@web3api/uts46": "0.0.1-prealpha.7",
-    "@web3api/sha3": "0.0.1-prealpha.7",
+    "@web3api/uts46-plugin-js": "0.0.1-prealpha.7",
+    "@web3api/sha3-plugin-js": "0.0.1-prealpha.7",
     "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
     "web-worker": "1.0.0"
