--- a/packages/js/plugins/idna-uts/package.json
+++ b/packages/js/plugins/idna-uts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3api/uts46",
+  "name": "@web3api/uts46-plugin-js",
   "description": "Web3API IDNA-UTS #46 Javascript Plugin",
   "version": "0.0.1-prealpha.7",
   "license": "MIT",
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/web3-api/monorepo.git"
   },
-  "main": "build/index.js",
+  "main": "build/idna-uts/src/index.js",
   "files": [
     "build",
     "schema.graphql"
