--- a/packages/js/plugins/sha3/package.json
+++ b/packages/js/plugins/sha3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3api/sha3",
+  "name": "@web3api/sha3-plugin-js",
   "description": "Web3API SHA3 Javascript Plugin",
   "version": "0.0.1-prealpha.7",
   "license": "MIT",
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/web3-api/monorepo.git"
   },
-  "main": "build/index.js",
+  "main": "build/sha3/src/index.js",
   "files": [
     "build",
     "schema.graphql"
